[gd_scene load_steps=7 format=3 uid="uid://xgcoewd2jcdw"]

[ext_resource type="Script" path="res://Global/Global.gd" id="1"]
[ext_resource type="PackedScene" path="res://Debug/DebugDisplay.tscn" id="2"]
[ext_resource type="PackedScene" path="res://UI/UI.tscn" id="3"]
[ext_resource type="PackedScene" path="res://UI/SceneTransition.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://dhqd4wam3yle1" path="res://Entities/Player/Player.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://h55kbuuuevfw" path="res://post_processing.tscn" id="7"]

[node name="Global" type="Node2D"]
script = ExtResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PostProcessing_tool" parent="CanvasLayer" instance=ExtResource("7")]

[node name="UI" parent="." instance=ExtResource("3")]

[node name="SceneTransition" parent="." instance=ExtResource("4")]
layer = 2

[node name="DebugDisplay" parent="." instance=ExtResource("2")]

[node name="Player" parent="." instance=ExtResource("5")]
